# tamagochi

./: .gitignore  Cargo.toml  Readme.md
artifacts/: checksums.txt  food.wasm  market.wasm  pet.wasm
contracts/market/: Cargo.toml
contracts/market/examples/: schema.rs
contracts/market/src/: contract.rs  msg.rs  state.rs
contracts/pet/: Cargo.toml
contracts/pet/examples/: schema.rs
contracts/pet/src/: common.rs  contract.rs  lib.rs  msg.rs  pet.rs  state.rs
scripts/: _config.sh  add_minter.sh  build_optimize_all.sh  buy_food.sh  cktx.sh  create.sh  create_food.sh  create_market.sh  create_pet.sh  create_viewing_key.sh  feed_pet.sh  get_pet.sh  init.sh  optimize.sh  query_balance.sh  set_name.sh  start.sh  upload.sh  upload_all.sh
